# leo-ai

./: .env.sample  README.md  assistant_config.yml  bob.sh  main_base_assistant.py  main_typer_assistant.py  pyproject.toml  scratchpad.md  test.py  workspace_config.json
commands/: template.py
commands/core/: .recent_files  .structure_cache  config.py  file_operations.py  framework_helpers.py  utils.py
components/home/: Carousel.jsx
integrations/: notion.py
modules/: typer_agent.py
